# deuseda

./: .env.example  .gitignore  CLAUDE.md  README.md  SECURITY_IMPROVEMENTS.md  SSH_AUTHENTICATION.md  TEST_REPORT.md  docker-compose.yml  reset-git-history.sh  test_auth.sh  test_simple_auth.sh  test_ssh_auth.sh
.github/workflows/: cd-production.yaml  ci-develop.yaml  ci-main.yaml  ci.yaml  deploy.yml
argocd/: deuseda-production.yaml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_initial_schema.sql  002_remove_totp.sql  003_terminal_sessions.sql
backend/src/: main.rs
backend/src/auth/: mod.rs
backend/src/db/: mod.rs
backend/src/handlers/: auth.rs  mod.rs  session.rs  terminal.rs  terminal_session.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs
backend/src/session/: mod.rs
backend/src/terminal/: mod.rs
docs/: ENVIRONMENT_VARIABLES.md  README.md  SECRETS_QUICK_REFERENCE.md  deployment.md  environment.md  operations.md  security.md  workflow.md
frontend/: .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
k8s/: README.md  argocd-application.yaml
k8s/base/: apex-redirect.yaml  backend-deployment.yaml  backend.yaml  certificate.yaml  configmap.yaml  frontend-deployment.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres-statefulset.yaml  postgres.yaml  secret-template.yaml  secret.example.yaml  secret.yaml
k8s/sealed-secrets/: README.md  (+5 more)
scripts/: create-secrets.sh  seal-secrets.sh
(+22 files in other folders)
